--- a/style.css
+++ b/style.css
@@ -693,8 +693,9 @@ body.app_version .header_style_01.fixed-menu{
 	font-weight: 600;
 }
 .about-right p{
-	font-size: 16px; 
-	font-weight: 300;
+    color: #181818;
+	font-size: 18px; 
+	font-weight: 400;
 }
 
 
